// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Test Linear Elements Inside editor should allow dragging line from midpoint in 2 pointer lines 1`] = `
Array [
  Array [
    0,
    0,
  ],
  Array [
    70,
    50,
  ],
  Array [
    40,
    0,
  ],
]
`;

exports[` Test Linear Elements Inside editor should allow dragging lines from midpoints in between segments 1`] = `
Array [
  Array [
    0,
    0,
  ],
  Array [
    85,
    75,
  ],
  Array [
    70,
    50,
  ],
  Array [
    105,
    75,
  ],
  Array [
    40,
    0,
  ],
]
`;

exports[` Test Linear Elements should allow dragging line from midpoint in 2 pointer lines outside editor 1`] = `
Array [
  Array [
    0,
    0,
  ],
  Array [
    70,
    50,
  ],
  Array [
    40,
    0,
  ],
]
`;
